2002-11-08  David Carlton  <carlton@math.stanford.edu>

	* linespec.c (symbol_found): New function.
	(minsym_found): New function.
	(decode_line_1): Separate out some code into separate functions.

2002-11-08  Joel Brobecker  <brobecker@gnat.com>

	* i386-tdep.c (i386_frameless_signal_p): Make non static for
	the benefit of the interix target.
	* i386-tdep.h (i386_frameless_signal_p): Declare.

2002-11-08  Andrew Cagney  <ac131313@redhat.com>

	* i386-tdep.h (i386_linux_orig_eax_regnum_p): Delete stray
	declaration that snuck in from change below.

2002-11-06  Andrew Cagney  <cagney@redhat.com>

	* i386-tdep.c (i386_mmx_regnum_p): Rename mmx_regnum_p.  Update
	all callers.
	(i386_fp_regnum_p): New function.  Use instead of FP_REGNUM_P.
	(i386_fpc_regnum_p): New function.  Use instead of FPC_REGNUM_P.
	(i386_sse_regnum_p): New function.  Use instead of SSE_REGNUM_P.
	(i386_mxcsr_regnum_p): new function.  Use instead of
	MXCSR_REGNUM_P.
	* i386-tdep.h (SSE_REGNUM_P): Delete macro.
	(i386_sse_regnum_p): Declare.
	(i386_mxcsr_regnum_p): Declare.
	(FP_REGNUM_P, FPC_REGNUM_P): Delete macros.
	(i386_fp_regnum_p, i386_fpc_regnum_p): Declare.
	(IS_FP_REGNUM): Update definition.
	(IS_FPU_CTRL_REGNUM): Update definition..
	(IS_SSE_REGNUM): Update definition..
	* i386v-nat.c (register_u_addr): Update.
	* go32-nat.c (fetch_register): Update.
	(store_register): Update.

2002-11-07  Joel Brobecker  <brobecker@gnat.com>

	Preparation work to convert the hppa targets to multiarch partial.

	* hppa-tdep.c: Add new functions replacing macro bodies from
	config/pa/tm-hppa.h. These function will be used to initialize
	the gdbarch structure. Import some comments from tm-hppa.h,
	and place them where appropriate, to avoid loosing them when
	we cleanup this file.
	(hppa_reg_struct_has_addr): New function.
	(hppa_inner_than): New function.
	(hppa_stack_align): New function.
	(hppa_pc_requires_run_before_use): New function.
	(hppa_instruction_nullified): New function.