@@ -1,3 +1,9 @@
+2002-11-08  Jim Blandy  <jimb@redhat.com>
+
+	* dwarf2read.c (read_func_scope): Restore local_symbols and
+	param_symbols after we finish the function context.  (Based on a
+	patch from David Edelsohn.)
+
 2002-11-08  David Carlton  <carlton@math.stanford.edu>
 
 	* linespec.c (symbol_found): New function.
